<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Blood Bank CET</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login_page">Login</string>
    <string name="title_activity_sqltest">sqltest</string>
    <string name="title_activity_sqlview">sqlview</string>
    <string name="title_activity_sqldb">sqldb</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_blooddb">blooddb</string>
    <string name="dummy_title"></string>
    <string name="choose_blood">Blood Group</string>
    <string name="number_of_months">Months b/w Donation</string>
    <string name="pref_months">number_of_months</string>
    <string name="pref_user_name">Username</string>
    <string name="pref_pass_word">Password</string>
    <string name="pref_is_user">User_exist</string>
    <string name="pref_is_admin">is_admin</string>
    <string name="donation_date">Last Donation</string>
    <string name="title_activity_view_blood">DATABASE</string>
    <string name="title_activity_addmember">Add Entry</string>
    <string name="title_activity_edit_entry">Edit Entry</string>
    <string name="blood_group_spinner_title">Select Blood Group</string>
    <string name="button_sign_up">I don\'t have an account, Register me.</string>
    <string name="action_delete_user">Delete Account</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="action_export">Export</string>
    <string name="action_import">Import</string>

    <string-array name="blood_groups">

        <!-- <item>All</item> -->
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>

    <string name="title_activity_signup">signup</string>

</resources>
