<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Home" >
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="500"
        android:showAsAction="never" />

    <item android:id="@+id/action_login"
    android:title="@string/action_login"
    android:orderInCategory="100"
    android:showAsAction="never" />

    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_export"
        android:title="@string/action_export"
        android:orderInCategory="51"
        android:showAsAction="never" />
    <item android:id="@+id/action_import"
        android:title="@string/action_import"
        android:orderInCategory="50"
        android:showAsAction="never" />

</menu>
